<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Detail">

    <LinearLayout
        android:id="@+id/foto"
        android:layout_width="3930dp"
        android:layout_height="195dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Ivfoto"
            android:layout_width="157dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            tools:src="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/judulbuku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/buku_name" />

            <TextView
                android:id="@+id/penulis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                tools:text="@string/penulis" />

            <TextView
                android:id="@+id/rilis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                tools:text="@string/tglrilis" />

            <TextView
                android:id="@+id/halamanbuku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"

                tools:text="@string/halaman" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="-316dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sipnosis1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:text="Sipnosis :" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="-316dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sipnosis2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            tools:text="@string/Sipnosis" />
    </LinearLayout>
</RelativeLayout>